# Chat-Forum

./: .gitignore  FEATURE_CODE_MAPPING.md  GIT-GUIDE.md  README.md  TUTORIAL.md  TUTORIAL2.md  build.bat  setup.bat  start.bat  使用说明.md  初始化数据库.bat  快速启动.bat
backend/: CMakeLists.txt  OPTIMIZATION_LOG.md  main.cpp
backend/controllers/: ChatController.cpp  ChatController.h  CommentController.cpp  CommentController.h  LikeController.cpp  LikeController.h  NotificationController.cpp  NotificationController.h  PostController.cpp  PostController.h  UserController.cpp  UserController.h
backend/models/: Comment.cpp  Comment.h  Like.cpp  Like.h  Message.cpp  Message.h  Post.cpp  Post.h  User.cpp  User.h
backend/services/: ChatService.cpp  ChatService.h  CommentService.cpp  CommentService.h  FileService.cpp  FileService.h  LikeService.cpp  LikeService.h  NotificationService.cpp  NotificationService.h  PostService.cpp  PostService.h  UserService.cpp  UserService.h
backend/utils/: AuthMiddleware.cpp  AuthMiddleware.h  ConfigUtil.cpp  ConfigUtil.h  JwtUtil.cpp  JwtUtil.h  ResponseUtil.cpp  ResponseUtil.h  ValidationUtil.cpp  ValidationUtil.h
backend/websocket/: ChatWebSocketController.cpp  ChatWebSocketController.h
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.vue
frontend/src/api/: chat.ts  comment.ts  like.ts  notification.ts  post.ts  request.ts  user.ts
frontend/src/components/: ChatMessage.vue  CollapsibleText.vue  CommentItem.vue  ImageUpload.vue  LikeButton.vue  NavBar.vue  PostCard.vue  UserAvatar.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  user.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
sql/: init_data.sql  schema.sql
(+11 files in other folders)
